--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
-
-
 {
+  "name": "seu-app",
+  "version": "1.0.0",
+  "description": "Seu aplicativo Node.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "jest test/app.test.js"
+    "test": "jest --detectOpenHandles --forceExit"
   },
-
-
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -15,5 +15,11 @@
   "devDependencies": {
     "jest": "^29.7.0",
     "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": "14.x"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
